# BendyPrint

./: CMakeLists.txt  LICENSE  README.md
asset/: guil.stl  iso.blend  lotine.stl  measurement.blend  measurement.blend1  plate.blend  plate.blend1  platemeasure.stl  stand.stl
src/: FEM.cpp  FEM.h  IntervalSlice.cpp  IntervalSlice.h  bread.cpp  bread.h  element.cpp  element.h  finiteelement.cpp  finiteelement.h  fixed.cpp  fixed.h  main.cpp  meshbuilder.cpp  meshbuilder.h  meshunwrapper.cpp  meshunwrapper.h  printer.cpp  printer.h  slicer.cpp  slicer.h  tensor.cpp  tensor.h  tetrahedron.cpp  tetrahedron.h
templates/: Ending.txt  Prologue.txt
